--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -17,7 +17,8 @@
             <ul>
                 <% contacts.forEach(function(contact) { %>
                 <!-- 3 -->
-                <li><%= contact.name %></li>
+                <!-- a태그 추가 : show action과 연결 -->
+                <li><a href="/contacts/<%= contact._id %>"><%= contact.name %></a></li>
                 <% }) %>
             </ul>
         </div>
