--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,5 @@
 <!-- views/partials/head.ejs -->
 
+<meta charset="UTF-8" />
 <link rel="stylesheet" href="/css/master.css" />
 <title>Contact</title>
