--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,5 +1,7 @@
-/* public/css/master.css */
-
+.contact .contact-form,
+.contact-index ul {
+    max-width: 500px;
+}
 .contact h2 {
     color: tomato;
 }
