--- a/views/contacts/show.ejs
+++ b/views/contacts/show.ejs
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
     <head>
-        <%- include('../partials/head.ejs') %>
+        <%- include('../partials/head') %>
     </head>
     <body>
-        <%- include('../partials/nav.ejs') %>
-        <div class="contact contact-show">
-            <h2>Show</h2>
-            <div>
-                <h3><%= contact.name%></h3>
-                <label>Email</label><span><%= contact.email %></span>
-                <br />
-                <label>Phone</label><span><%= contact.phone %></span>
-            </div>
-            <div class="contact-menu">
-                <!-- 1 : 누르면 edit페이지 보여줌 -->
-                <a href="/contacts/<%= contact._id %>/edit">Edit</a>
+        <%- include('../partials/nav') %>
 
-                <!-- 2 : 확인 메시지에 확인을 눌렀을 때 submit하게 해서 get요청이 ~로 가고 삭제시킨다. -->
+        <div class="container contact contact-show">
+            <h2>Show</h2>
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title"><%= contact.name%></h3>
+                    <label>Email</label><span><%= contact.email %></span>
+                    <br />
+                    <label>Phone</label><span><%= contact.phone %></span>
+                </div>
+            </div>
+            <div class="contact-menu mt-2">
+                <a href="/contacts/<%= contact._id %>/edit" class="btn btn-light mr-2">Edit</a>
                 <form action="/contacts/<%= contact._id %>?_method=delete" method="post">
-                    <a href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
+                    <a href="#" class="btn btn-light" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
                 </form>
             </div>
         </div>
